tests/snapshots/compiler__if_statement.snap
---
source: tests/compiler.rs
expression: output
---
CompiledProgram {
    functions: [],
    global_code: [
        LoadLiteral {
            dest: 1,
            src: 0,
        },
        JumpIfFalse {
            src: 1,
            offset: 6,
        },
        LoadLiteral {
            dest: 2,
            src: 1,
        },
        Copy {
            dest: 3,
            src: 2,
        },
        LoadLiteral {
            dest: 4,
            src: 2,
        },
        CallNativeFunction {
            src: 4,
            arg_count: 1,
            return_val: 5,
        },
        Jump {
            offset: 5,
        },
        LoadLiteral {
            dest: 6,
            src: 3,
        },
        Copy {
            dest: 7,
            src: 6,
        },
        LoadLiteral {
            dest: 8,
            src: 2,
        },
        CallNativeFunction {
            src: 8,
            arg_count: 1,
            return_val: 9,
        },
        LoadLiteral {
            dest: 10,
            src: 4,
        },
        LoadLiteral {
            dest: 11,
            src: 5,
        },
        Equals {
            dest: 12,
            lhs: 10,
            rhs: 11,
        },
        JumpIfFalse {
            src: 12,
            offset: 6,
        },
        LoadLiteral {
            dest: 13,
            src: 3,
        },
        Copy {
            dest: 14,
            src: 13,
        },
        LoadLiteral {
            dest: 15,
            src: 2,
        },
        CallNativeFunction {
            src: 15,
            arg_count: 1,
            return_val: 16,
        },
        Jump {
            offset: 5,
        },
        LoadLiteral {
            dest: 17,
            src: 1,
        },
        Copy {
            dest: 18,
            src: 17,
        },
        LoadLiteral {
            dest: 19,
            src: 2,
        },
        CallNativeFunction {
            src: 19,
            arg_count: 1,
            return_val: 20,
        },
        LoadLiteral {
            dest: 21,
            src: 4,
        },
        LoadLiteral {
            dest: 22,
            src: 5,
        },
        GreaterThanOrEquals {
            dest: 23,
            lhs: 21,
            rhs: 22,
        },
        JumpIfFalse {
            src: 23,
            offset: 6,
        },
        LoadLiteral {
            dest: 24,
            src: 1,
        },
        Copy {
            dest: 25,
            src: 24,
        },
        LoadLiteral {
            dest: 26,
            src: 2,
        },
        CallNativeFunction {
            src: 26,
            arg_count: 1,
            return_val: 27,
        },
        Jump {
            offset: 5,
        },
        LoadLiteral {
            dest: 28,
            src: 3,
        },
        Copy {
            dest: 29,
            src: 28,
        },
        LoadLiteral {
            dest: 30,
            src: 2,
        },
        CallNativeFunction {
            src: 30,
            arg_count: 1,
            return_val: 31,
        },
        LoadLiteral {
            dest: 32,
            src: 4,
        },
        LoadLiteral {
            dest: 33,
            src: 5,
        },
        LessThanOrEquals {
            dest: 34,
            lhs: 32,
            rhs: 33,
        },
        JumpIfFalse {
            src: 34,
            offset: 6,
        },
        LoadLiteral {
            dest: 35,
            src: 3,
        },
        Copy {
            dest: 36,
            src: 35,
        },
        LoadLiteral {
            dest: 37,
            src: 2,
        },
        CallNativeFunction {
            src: 37,
            arg_count: 1,
            return_val: 38,
        },
        Jump {
            offset: 5,
        },
        LoadLiteral {
            dest: 39,
            src: 1,
        },
        Copy {
            dest: 40,
            src: 39,
        },
        LoadLiteral {
            dest: 41,
            src: 2,
        },
        CallNativeFunction {
            src: 41,
            arg_count: 1,
            return_val: 42,
        },
        LoadLiteral {
            dest: 43,
            src: 4,
        },
        LoadLiteral {
            dest: 44,
            src: 5,
        },
        GreaterThan {
            dest: 45,
            lhs: 43,
            rhs: 44,
        },
        JumpIfFalse {
            src: 45,
            offset: 6,
        },
        LoadLiteral {
            dest: 46,
            src: 1,
        },
        Copy {
            dest: 47,
            src: 46,
        },
        LoadLiteral {
            dest: 48,
            src: 2,
        },
        CallNativeFunction {
            src: 48,
            arg_count: 1,
            return_val: 49,
        },
        Jump {
            offset: 5,
        },
        LoadLiteral {
            dest: 50,
            src: 3,
        },
        Copy {
            dest: 51,
            src: 50,
        },
        LoadLiteral {
            dest: 52,
            src: 2,
        },
        CallNativeFunction {
            src: 52,
            arg_count: 1,
            return_val: 53,
        },
        LoadLiteral {
            dest: 54,
            src: 4,
        },
        LoadLiteral {
            dest: 55,
            src: 5,
        },
        LessThan {
            dest: 56,
            lhs: 54,
            rhs: 55,
        },
        JumpIfFalse {
            src: 56,
            offset: 6,
        },
        LoadLiteral {
            dest: 57,
            src: 3,
        },
        Copy {
            dest: 58,
            src: 57,
        },
        LoadLiteral {
            dest: 59,
            src: 2,
        },
        CallNativeFunction {
            src: 59,
            arg_count: 1,
            return_val: 60,
        },
        Jump {
            offset: 5,
        },
        LoadLiteral {
            dest: 61,
            src: 1,
        },
        Copy {
            dest: 62,
            src: 61,
        },
        LoadLiteral {
            dest: 63,
            src: 2,
        },
        CallNativeFunction {
            src: 63,
            arg_count: 1,
            return_val: 64,
        },
        LoadLiteral {
            dest: 65,
            src: 6,
        },
        JumpIfFalse {
            src: 65,
            offset: 6,
        },
        LoadLiteral {
            dest: 66,
            src: 3,
        },
        Copy {
            dest: 67,
            src: 66,
        },
        LoadLiteral {
            dest: 68,
            src: 2,
        },
        CallNativeFunction {
            src: 68,
            arg_count: 1,
            return_val: 69,
        },
        Jump {
            offset: 12,
        },
        LoadLiteral {
            dest: 70,
            src: 0,
        },
        JumpIfFalse {
            src: 70,
            offset: 6,
        },
        LoadLiteral {
            dest: 71,
            src: 1,
        },
        Copy {
            dest: 72,
            src: 71,
        },
        LoadLiteral {
            dest: 73,
            src: 2,
        },
        CallNativeFunction {
            src: 73,
            arg_count: 1,
            return_val: 74,
        },
        Jump {
            offset: 5,
        },
        LoadLiteral {
            dest: 75,
            src: 3,
        },
        Copy {
            dest: 76,
            src: 75,
        },
        LoadLiteral {
            dest: 77,
            src: 2,
        },
        CallNativeFunction {
            src: 77,
            arg_count: 1,
            return_val: 78,
        },
    ],
    global_register_count: 79,
    literals: [
        Boolean(
            true,
        ),
        String(
            "pass",
        ),
        String(
            "print",
        ),
        String(
            "fail",
        ),
        Integer(
            2,
        ),
        Integer(
            0,
        ),
        Boolean(
            false,
        ),
    ],
}
