tests/snapshots/compiler__prefix.snap
---
source: tests/compiler.rs
expression: output
---
CompiledProgram {
    functions: [],
    global_code: [
        LoadLiteral {
            dest: 1,
            src: 0,
        },
        PrefixSub {
            dest: 2,
            rhs: 1,
        },
        LoadLiteral {
            dest: 3,
            src: 0,
        },
        Add {
            dest: 4,
            lhs: 2,
            rhs: 3,
        },
        PrefixSub {
            dest: 5,
            rhs: 4,
        },
    ],
    global_register_count: 6,
    literals: [
        Integer(
            3,
        ),
    ],
}
