tests/snapshots/compiler__prefix_boolean.snap
---
source: tests/compiler.rs
expression: output
---
CompiledProgram {
    functions: [],
    global_code: [
        LoadLiteral {
            dest: 1,
            src: 0,
        },
        PrefixNot {
            dest: 2,
            rhs: 1,
        },
    ],
    global_register_count: 3,
    literals: [
        Boolean(
            true,
        ),
    ],
}
