tests/snapshots/compiler__variable_mutation.snap
---
source: tests/compiler.rs
expression: output
---
CompiledProgram {
    functions: [],
    global_code: [
        LoadLiteral {
            dest: 1,
            src: 0,
        },
        LoadLiteral {
            dest: 2,
            src: 1,
        },
    ],
    global_register_count: 3,
    literals: [
        Integer(
            3,
        ),
        Integer(
            2,
        ),
    ],
}
